[package]
name = "resters"
version = "0.1.0"
edition = "2021"
description = "A lightweight cross-platform Rest API tester gui built using fltk-rs"
license = "MIT"
categories = ["visualization", "Web programming"]
documentation = "https://docs.rs/resters"
readme = "README.md"
keywords = ["cross-platform", "rest", "api", "gui", "http"]

[dependencies]
fltk  = { version = "1.3.18" }
fltk-theme = "0.6"
ureq = { version = "2.5.0", features = ["json"] }
serde_json = "1"
json-tools = "1.1"

[profile.release]
opt-level = 3
strip = true